fixes to mobile modal and overflow

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 104px 28px;
+  padding: 30px 75px 28px;
   background-color: white;
   margin: 0 auto;
   max-width: 1440px;
@@ -66,7 +66,6 @@
   width: 24px;
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 0 38px 0 0;
   display: block;
   border: none;
   outline: none;
@@ -75,28 +74,27 @@
 
 @media (max-width: 900px) {
   .footer {
-    padding: 20px 40px 20px;
+    padding: 20px 40px;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     gap: 20px;
-    margin: 0px;
+    margin: 0 auto;
   }
 
   .footer__text {
     margin: 0;
     font-size: 16px;
     line-height: 22px;
-    white-space: nowrap;
   }
 
   .footer__nav {
     flex-direction: row;
-    gap: 40px;
+    gap: 20px;
   }
 
   .footer__link {
-    font-size: 18px;
+    font-size: 16px;
     padding: 0;
   }
 
@@ -116,7 +114,47 @@
   }
 
   .footer__github-icon {
-    margin-left: 40px;
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 20px 30px;
+  }
+
+  .footer__nav {
+    gap: 15px;
+  }
+
+  .footer__github-icon {
+    margin-left: 15px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    padding: 20px;
+  }
+
+  .footer__text {
+    font-size: 14px;
+  }
+
+  .footer__link {
+    font-size: 14px;
+  }
+
+  .footer__nav {
+    gap: 10px;
+  }
+
+  .footer__media {
+    gap: 10px;
+  }
+
+  .footer__github-icon {
+    margin-left: 10px;
   }
 }
 
