--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -8,11 +8,14 @@
 
 .news-card-list {
   display: grid;
-  grid-template-columns: repeat(3, 400px);
+  grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  margin: 0 0 64px 0;
-  width: 1232px;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto 64px;
   list-style: none;
+  justify-items: center;
+  padding-left: 0px;
 }
 
 .news-card-list li {
